--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +9,39 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <h1><a href="works.html">みずみのポートフォリオ</a></h1>
   </header>
+
   <nav>
-    <div class="container">
-      <ul>
-        <li><a href="works.html">Works</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
+    <ul>
+      <li><a href="works.html">Works</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <section class="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>TwitterのDMにてご連絡をお願いいたします。
-      </p>
-      <a href="https://twitter.com/mizumidayo" target="_blank"><i class="bi bi-twitter"></i></a>
+  <div class="container animate-bg animate">
+    <div class="text-container">
+      <h2 class="animate">Contact</h2>
+      <div class="animate delay1">
+        <p>ご連絡はTwitterのDMよりお願い致します。</p>
+  
+        <div class="sns">
+          <a href="https://twitter.com/mizumidayo" target="_blank"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.youtube.com/@mizumi8098" target="_blank"><i class="bi bi-youtube"></i></a>
+        </div>
+      </div>
     </div>
-  </section>
+  </div>
 
   <footer>
-    <div class="container">
-      <small>(c)mizumi</small>
-    </div>
+    <small>(c)mizumi</small>
   </footer>
+
+  <script src="main.js"></script>
 </body>
+
 </html>
